working on form items in samanira page

--- a/samanira.html
+++ b/samanira.html
@@ -57,36 +57,41 @@
                 <div class="portfolio-content samanira has-shape shape-4">
                     <div class="frame clearFixAfter">
                         <div class="main-port-content">
-                            <h4 class="reveal">What is <strong>SamanirA</strong> ?</h4>
-                            <p><a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> is an easy HTML / CSS / JS framework for "<strong>Front-end Developers</strong>" who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions and plugins.<br />
-                            Created by <a href="http://wwww.samanrashidi.com" target="_blank">Saman Rashidi</a> &amp; <a href="http://www.samirasalimian.com" target="_blank">Samira Salimian</a></p>
-                            <h4 class="reveal">Why <strong>SamanirA</strong> ?</h4>
-                            <p>We have done more than 50 front-end projects such as Website, Landing Page, CMS, CRM and &hellip; in 4 years then we noticed that we need a light and comprehensive css framework to work with and it will have so many benefits for our projects:</p>
-                            <ul>
-                                <li>It is open source and easy to understand for changing values and classes based on your project's template</li>
-                                <li>It has the same arrangement for all css properties</li>
-                                <li>Most of the css classes and javascript functions that you need in projects are defined</li>
-                                <li>Back-end developers will love you for your code discipline</li>
-                                <li>Your folders, codes and classes will be same for all projects</li>
-                            </ul>
-                            <h4 class="reveal">Where to <strong>begin</strong> ?</h4>
-                            <ol>
-                                <li li-number="1 -">
-                                    <a href="http://github.com/samanrashidii/samanira" target="_blank">Download</a> from Github
-                                    <img src="images/samanira/step-1.jpg" alt="Samanira Setup - Step 1" />
-                                </li>
-                                <li li-number="2 -">
-                                    Unzip in your project's folder
-                                    <img src="images/samanira/step-2.jpg" alt="Samanira Setup - Step 2" />
-                                </li>
-                                <li li-number="3 -">
-                                    Start coding your project
-                                    <img src="images/samanira/step-3.jpg" alt="Samanira Setup - Step 3" />
-                                </li>
-                            </ol>
-                            <h4 class="reveal">What is the arrangement rules for <strong>css properties</strong> ?</h4>
-                            <p>In <a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> we put each css property with the same arrangement after each other, that makes your code organized and clean. You can see the arrangement rules here :</p>
-                            <div class="css-code-box">
+                            <div id="about-samanira">
+                                <h4 class="reveal">What is <strong>SamanirA</strong> ?</h4>
+                                <p><a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> is an easy HTML / CSS / JS framework for "<strong>Front-end Developers</strong>" who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions and plugins.<br />
+                                Created by <a href="http://wwww.samanrashidi.com" target="_blank">Saman Rashidi</a> &amp; <a href="http://www.samirasalimian.com" target="_blank">Samira Salimian</a></p>
+                                <h4 class="reveal">Why <strong>SamanirA</strong> ?</h4>
+                                <p>We have done more than 50 front-end projects such as Website, Landing Page, CMS, CRM and &hellip; in 4 years then we noticed that we need a light and comprehensive css framework to work with and it will have so many benefits for our projects:</p>
+                                <ul>
+                                    <li>It is open source and easy to understand for changing values and classes based on your project's template</li>
+                                    <li>It has the same arrangement for all css properties</li>
+                                    <li>Most of the css classes and javascript functions that you need in projects are defined</li>
+                                    <li>Back-end developers will love you for your code discipline</li>
+                                    <li>Your folders, codes and classes will be same for all projects</li>
+                                </ul>
+                            </div><!-- about-samanira end -->
+                            <div id="setup-samanira">
+                                <h4 class="reveal">Where to <strong>begin</strong> ?</h4>
+                                <ol>
+                                    <li li-number="1 -">
+                                        <a href="http://github.com/samanrashidii/samanira" target="_blank">Download</a> from Github
+                                        <img src="images/samanira/step-1.jpg" alt="Samanira Setup - Step 1" />
+                                    </li>
+                                    <li li-number="2 -">
+                                        Unzip in your project's folder
+                                        <img src="images/samanira/step-2.jpg" alt="Samanira Setup - Step 2" />
+                                    </li>
+                                    <li li-number="3 -">
+                                        Start coding your project
+                                        <img src="images/samanira/step-3.jpg" alt="Samanira Setup - Step 3" />
+                                    </li>
+                                </ol>
+                            </div><!-- setup-samanira end -->
+                            <div id="arrangement-rules">
+                                <h4 class="reveal">What is the arrangement rules for <strong>css properties</strong> ?</h4>
+                                <p>In <a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> we put each css property with the same arrangement after each other, that makes your code organized and clean. You can see the arrangement rules here :</p>
+                                <div class="css-code-box">
 <pre>
 <code>                            
 <span class="selector">Selector</span><span class="code-item">{</span>
@@ -153,12 +158,16 @@
 <span class="code-item">}</span>
 </code>
 </pre>
-                            </div><!-- css-code-box end -->
-                            <p><span class="site-color-2">*</span> If you want to add more property in your css code put them in the "other properties" area</p>
-                            <h4 class="reveal">What are the <strong>defined classes</strong> ?</h4>
-                            <p>In <a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> every item that we may need to create a web pages is defined in form of categories, We will go through "samanira.css" and see how it is working:</p>
-                            <h5>#MAIN</h5>
-                            <div class="css-code-box">
+                                </div><!-- css-code-box end -->
+                                <p><span class="site-color-2">*</span> If you want to add more property in your css code put them in the "other properties" area</p>
+                            </div><!-- arrangement-rules end -->
+                            <div id="defined-classes">
+                                <h4 class="reveal">What are the <strong>defined classes</strong> ?</h4>
+                                <p>In <a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> every item that we may need to create a web pages is defined in form of categories, We will go through "samanira.css" and see how it is working:</p>
+                                <div class="class-box">
+                                    <h5>#GLOBAL</h5>
+                                    <h6>_Main Styles</h6>
+                                    <div class="css-code-box">
 <pre>
 <code>
 <span class="selector">*</span><span class="code-item">,</span>
@@ -248,10 +257,13 @@
 <span class="code-item">}</span>
 </code>
 </pre>
-                            </div><!-- css-code-box end -->
-                            <p>- In here we are resetting main selectors and defining the project main properties</p>
-                            <h5>#FORM</h5>
-                            <div class="css-code-box">
+                                    </div><!-- css-code-box end -->
+                                    <p>- In here we are resetting global selectors and defining the project main properties</p>
+                                </div><!-- class-box end -->
+                                <div class="class-box">
+                                    <h5>#FORM</h5>
+                                    <h6>_Main Styles</h6>
+                                    <div class="css-code-box">
 <pre>
 <code>
 <span class="selector">::-webkit-input-placeholder</span><span class="code-item">{</span>
@@ -409,15 +421,155 @@
 <span class="selector">input[type="submit"]:focus</span><span class="code-item">{</span>background-color: #0a9abd;<span class="code-item">}</span>
 </code>
 </pre>
-                            </div><!-- css-code-box end -->
-                            <p>- In here we are resetting form selectors and defining the project form properties</p>                        
+                                    </div><!-- css-code-box end -->
+                                    <p>- In here we are resetting form selectors and defining the project form properties</p>
+                                    <h6>_Actions</h6>
+                                    <div class="css-code-box">
+<pre>
+<code>
+<span class="selector">input:not([type="submit"]):focus</span><span class="code-item">,</span>
+<span class="selector">textarea:focus</span><span class="code-item">,</span>
+<span class="selector">select:focus</span><span class="code-item">{</span>border-color: #0a9abd;<span class="code-item">}</span>
+
+<span class="selector">input[type="submit"]:hover</span><span class="code-item">,</span>
+<span class="selector">input[type="submit"]:focus</span><span class="code-item">{</span>background-color: #0a9abd;<span class="code-item">}</span>
+</code>    
+</pre>                                    
+                                    </div><!-- css-code-box end -->
+                                    <p>- These are the hover and focus effects for form inputs and buttons</p>
+                                    <h6>_Validation</h6>
+                                    <div class="css-code-box">
+<pre>
+<code>
+<span class="selector">.error</span><span class="code-item">{</span>border:1px solid #e56262 !important;<span class="code-item">}</span>
+<span class="selector">.valid</span><span class="code-item">{</span>border:1px solid #61bd61 !important;<span class="code-item">}</span>
+
+<span class="selector">label.error</span><span class="code-item">{</span>
+    font-size: 16px;
+    color:#e56262;
+    padding-top:8px;
+    background: none !important;
+    border:none !important;
+<span class="code-item">}</span>
+</code>    
+</pre>                                    
+                                    </div><!-- css-code-box end -->
+                                    <p>- These are the validation styles and will apply by jquery validate</p>
+                                    <h6>_Classes in Form</h6>
+                                    <div class="css-code-box">
+<pre>
+<code>
+<span class="selector">.form-field-holder</span><span class="code-item">{</span>
+    position: relative;
+    width: 100%;
+<span class="code-item">}</span>
+
+<span class="selector">.form-field-holder .field-icon</span><span class="code-item">{</span>
+    position: absolute;
+    top:50%;
+    right: 10px;
+    width: 32px;
+    height: 32px;
+    margin-top:-16px;
+    border:1px solid #121212;
+<span class="code-item">}</span>
+
+<span class="selector">.field-holder</span><span class="code-item">{</span>
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    margin:15px 0;
+<span class="code-item">}</span>
+
+<span class="selector">.reverse-input</span><span class="code-item">{</span>direction: rtl;<span class="code-item">}</span>
+
+<span class="selector">.textarea-word-tracker</span><span class="code-item">{</span>position: relative;<span class="code-item">}</span>
+
+<span class="selector">.textarea-word-tracker span</span><span class="code-item">{</span>
+    position: absolute;
+    bottom:15px;
+    right:15px;
+    display: inline-block;
+    font-size: 15px;
+<span class="code-item">}</span>
+
+<span class="selector">.samanira_secure</span><span class="code-item">{</span>
+    height: 0 !important;
+    visibility: hidden !important;
+    opacity: 0 !important;
+    border:none !important;
+<span class="code-item">}</span>
+</code>    
+</pre>                                    
+                                    </div><!-- css-code-box end -->
+                                    <p>- Put each label and form item (input/textarea/select) in a &lt;div&gt; with class of <span class="site-color">field-holder</span></p>
+                                    <p>- If you want to add icons to your input just wrap it in a &lt;div&gt; with class of form-field-holder and then put your icon in <span class="site-color">.field-icon</span></p>
+                                    <p>- <span class="site-color">.reverse-input</span> will change the direction of an input</p>
+                                    <p>- <span class="site-color">.textarea-word-tracker</span> will make a textarea with the counting number function in samanira.js</p>
+                                    <div class="sample-box">
+                                        <div class="textarea-word-tracker">
+                                            <textarea maxlength="250"></textarea>
+                                            <span></span>
+                                        </div><!-- textarea-word-tracker end -->
+                                    </div><!-- sample-box end -->
+                                    <p>- <span class="site-color">.samanira_secure</span> will be for an input with the type of text and is for preventing form from spamming with bots in front-end side with a function in samanira.js</p>
+                                    <h6>_Upload Button</h6>
+                                    <div class="css-code-box">
+<pre>
+<code>
+<span class="selector">.upload-bttn</span><span class="code-item">{</span>
+    position: absolute;
+    top:0;
+    right: 0;
+    display: inline-block;
+    width: 160px;
+    height: 51px;
+    line-height: 51px;
+    overflow: hidden;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 2px;
+<span class="code-item">}</span>
+
+<span class="selector">.upload-bttn input[type="file"]</span><span class="code-item">{</span>display: none;<span class="code-item">}</span>
+
+<span class="selector">.upload-bttn label</span><span class="code-item">{</span>
+    position: relative;
+    display: block;
+    font-size: 15px;
+    color:#ffffff;
+    padding:0;
+    cursor: pointer;
+    background-color: #121212;
+    z-index: 6;
+    -webkit-transition:all .2s ease-in-out;
+    -moz-transition:all .2s ease-in-out;
+    transition:all .2s ease-in-out;
+<span class="code-item">}</span>
+
+<span class="selector">.upload-bttn label:hover</span><span class="code-item">{</span>background-color: #0a9abd;<span class="code-item">}</span>
+
+<span class="selector">.uploaded-photo-box</span><span class="code-item">{</span>
+    position: relative;
+    display: inline-block;
+    min-width: 120px;
+    background-color: #f7f7f9;
+    border-radius: 2px;
+<span class="code-item">}</span>
+
+<span class="selector">.uploaded-photo-box img</span><span class="code-item">{</span>display: block;<span class="code-item">}</span>
+</code>    
+</pre>                                    
+                                    </div><!-- css-code-box end -->
+                                </div><!-- class-box end -->
+                            </div><!-- defined-classes end --> 
                         </div><!-- main-port-content end -->
                         <div class="side-port-content">
                             <div class="button-box">
-                                <a class="bttn" href="#">About SamanirA</a>
-                                <a class="bttn" href="#">Setup SamanirA</a>
-                                <a class="bttn" href="#">Arrangement Rules</a>
-                                <a class="bttn" href="#">Defined Classes</a>
+                                <a class="bttn" href="#about-samanira">About SamanirA</a>
+                                <a class="bttn" href="#setup-samanira">Setup SamanirA</a>
+                                <a class="bttn" href="#arrangement-rules">Arrangement Rules</a>
+                                <a class="bttn" href="#defined-classes">Defined Classes</a>
                             </div><!-- button-box end -->
                         </div><!-- side-port-content end -->
                     </div><!-- frame end -->
